--- a/package.json
+++ b/package.json
@@ -1,1 +1,11 @@
-
+{
+"name": "calamari-lite-onecompiler",
+"version": "0.0.2",
+"main": "server.js",
+"scripts": { "start": "node server.js" },
+"dependencies": {
+"cors": "^2.8.5",
+"express": "^4.19.2",
+"jsonwebtoken": "^9.0.2"
+}
+}
