--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-"name": "calamari-lite-onecompiler",
-"version": "0.0.2",
-"main": "server.js",
-"scripts": { "start": "node server.js" },
-"dependencies": {
-"cors": "^2.8.5",
-"express": "^4.19.2",
-"jsonwebtoken": "^9.0.2"
-}
+  "name": "calamari-lite-onecompiler",
+  "version": "0.0.3",
+  "private": true,
+  "description": "Calamari-lite: Node/Express backend + static frontend (public/)",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "engines": {
+    "node": "20.x"
+  },
+  "license": "MIT"
 }
